@@ -1,19 +1,20 @@
 package etu1848.framework.servlet;
 
-import java.io.IOException;
-import java.io.PrintWriter;
+import java.io.*;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
 import java.net.http.HttpRequest;
 import java.nio.file.Path;
+import javax.servlet.annotation.MultipartConfig;
 
 import javax.servlet.*;
 import javax.servlet.http.*;
 import javax.swing.text.Utilities;
 import javax.servlet.annotation.WebServlet;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -21,15 +22,19 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import etu1848.framework.Mapping;
+import etu1848.framework.FileUpload;
 import etu1848.framework.ModelView;
+import etu1848.framework.PathUpload;
+import etu1848.framework.Scope;
 import etu1848.framework.Url;
 import etu1848.framework.Arguments;
 import etu1848.framework.Utils;
 
+@MultipartConfig
 public class FrontServlet extends HttpServlet {
     HashMap<String, Mapping> mappingUrls;
     String nomDePackage;
-
+    HashMap<Class, Object> singletons = new HashMap<>();
     protected void processRequest(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         response.setContentType("text/html;charset=UTF-8");
@@ -38,18 +43,32 @@ public class FrontServlet extends HttpServlet {
             // entrySet -> ampiasaina ao am boucle angalana an le clef sy valeur
             out.println("You are being redirected to FRONTSERVLET");
 
+            
             Mapping map = this.getMapping(request);
-            Object obj = Class.forName(map.getClassName()).newInstance();
+            Class classe = Class.forName(map.getClassName());
+
+            System.out.println(classe + " classe " + getSingletons().size());
+            Object obj = null;
+            if(this.getSingletons().containsKey(classe)){
+                obj = this.getSingletons().get(classe);
+                revenirANull(obj);
+                System.out.println("PAS BESOIN DE NOUVELLE INSTANCE");
+            }else{
+                obj = classe.getDeclaredConstructor().newInstance();
+                System.out.println("VRAIMENT BESOIN DE NOUVELLE INSTANCE");
+            }
+            System.out.println(obj + " ADRESSEE");
             sendData(request, obj);
 
             Method method = getMethod(map, obj);
             ModelView modelView = (ModelView) getModelView(request, map, obj);
-            addData(request, modelView);
-            RequestDispatcher dispat = request.getRequestDispatcher(modelView.getVueRedirection());
 
-            System.out.println(modelView.getVueRedirection() + " VUE DE REDIRECTION");
-
-            dispat.forward(request, response);
+                addData(request, modelView);
+                RequestDispatcher dispat = request.getRequestDispatcher(modelView.getVueRedirection());
+    
+                System.out.println(modelView.getVueRedirection() + " VUE DE REDIRECTION");
+    
+                dispat.forward(request, response);
 
         } catch (Exception e) {
             out.println(e.getMessage() + "\n");
@@ -60,7 +79,6 @@ public class FrontServlet extends HttpServlet {
     public void addData(HttpServletRequest request, ModelView modelView) {
         Map<String, String[]> donneesJSP;
         if (request.getParameterMap() != null && !request.getParameterMap().isEmpty()) {
-            System.out.println("NILA ARGUMENTS");
             donneesJSP = request.getParameterMap();
 
             // out.println(donneesJSP.toString() + " donneesJSP");
@@ -70,7 +88,6 @@ public class FrontServlet extends HttpServlet {
                 modelView.addItem(parameterName, donneesJSP.get(parameterName)[0]);
             }
         } else {
-            System.out.println("TSY NILA ARGUMENTS");
         }
         for (Map.Entry<String, Object> obj : modelView.getData().entrySet()) {
             request.setAttribute(obj.getKey(), obj.getValue());
@@ -80,14 +97,92 @@ public class FrontServlet extends HttpServlet {
     public void sendData(HttpServletRequest request, Object obj) throws Exception {
         Field[] fields = obj.getClass().getDeclaredFields();
         for (Field field : fields) {
-            String value = request.getParameter(field.getName());
+            field.setAccessible(true);
+            String value = field.getName();
+            if(multiPartFormDataContentType(request)){
             if (value != null) {
-                field.setAccessible(true);
-                Class castValue = (Class<?>) field.getType();
-                field.set(obj, Utils.cast(value, castValue));
+                    if(field.getType().getSimpleName().equalsIgnoreCase("FileUpload") == true){
+                        try {
+                            System.out.println("THERE IS A FILE TO UPLOAD TAFIDITRAAAAAAAAAAAA");
+                            Part filePart=request.getPart(value);
+                            FileUpload upload=new FileUpload();
+                            upload.setFileName(filePart.getSubmittedFileName()); 
+                            InputStream inputStream = filePart.getInputStream();
+                            upload.setData(inputStream.readAllBytes());
+                            System.out.println(upload.getData());
+                            Class<?> clazz = obj.getClass();
+                            // Retrieve the PathUploadClass annotation from the class
+                            PathUpload annotation = clazz.getAnnotation(PathUpload.class);
+                            if (annotation != null) {
+                                String filePath = annotation.filePath();
+                                Utils.uploadFile(upload, filePath, value, request);
+                            }else{
+                                System.out.println("Aucune annotation donnée à PathUpload");
+                            }
+                        } catch (Exception e) {
+                            throw new Exception("Verifier si vous avez bien télécharger quelque chose");
+                        }
+                    }else{
+                        String valeur = request.getParameter(field.getName());
+                        Class castValue = (Class<?>) field.getType();
+                        field.set(obj, Utils.cast(valeur, castValue));
+                    }
+                }
             }
         }
     }
+
+    public void revenirANull(Object object) {
+        try {
+            Field[] fields = object.getClass().getDeclaredFields();
+            Object objectNull = new Object();
+            
+            for (Field field : fields) {
+                // Obtenir le nom du champ
+                String fieldName = field.getName();
+                
+                // Convertir le nom du champ en nom de méthode de setter
+                String setterName = "set" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1);
+                System.out.println(setterName + " SETTERNAME");
+                // Obtenir le type du champ
+                Class<?> fieldType = field.getType();
+                List<Class<?>> nonNullableTypes = typesNonNullables();
+                for (int i = 0; i < nonNullableTypes.size(); i++) {
+                    if(fieldType.toString().equalsIgnoreCase(nonNullableTypes.get(i).toString()))
+                    System.out.println("NON NULLABLE" + fieldType);
+                }
+                objectNull = null;
+                // Obtenir la méthode de setter correspondante
+                Method setterMethod = object.getClass().getMethod(setterName, fieldType);
+                System.out.println(setterMethod + " SETTERMETHOD");
+                // Appeler le setter avec la valeur null
+                
+                setterMethod.invoke(object, objectNull);
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    public List<Class<?>> typesNonNullables(){
+        List<Class<?>> nonNullableTypes = new ArrayList<>();
+        nonNullableTypes.add(boolean.class);
+        nonNullableTypes.add(byte.class);
+        nonNullableTypes.add(short.class);
+        nonNullableTypes.add(int.class);
+        nonNullableTypes.add(long.class);
+        nonNullableTypes.add(float.class);
+        nonNullableTypes.add(double.class);
+        nonNullableTypes.add(char.class);
+        return nonNullableTypes;
+    }
+public static boolean multiPartFormDataContentType(HttpServletRequest request){
+    String contentType = request.getContentType();
+    if(contentType != null && contentType.startsWith("multipart/form-data")){
+        return true;
+    }
+    return false;
+}
 
     public String[] avoirLaListeArguments(Method methodCalled) {
         String[] thoseAre = null;
@@ -110,7 +205,6 @@ public class FrontServlet extends HttpServlet {
             String clef = entry.getKey();
             String method = entry.getValue().getMethod();
             if (path[1].compareToIgnoreCase(clef) == 0) {
-                System.out.println(entry.getValue() + " - " + entry.getValue().getMethod());
                 return entry.getValue();
             }
         }
@@ -128,10 +222,8 @@ public class FrontServlet extends HttpServlet {
             Class typeArguments = parameters[i].getType();
             // Avadika string le valeur an le paramètre tany am le méthode
             String value = request.getParameter(listeArguments[i]);
-            System.out.println(parameters[i].getName() + " parameters[i].getName()");
             // Avadika ho le type originaleny amzay le izy aveo
             argumentsDeMethode[i] = Utils.cast(value, typeArguments);
-            System.out.println(argumentsDeMethode[i] + " argumentsDeMethode[i]");
         }
         return argumentsDeMethode;
     }
@@ -152,9 +244,19 @@ public class FrontServlet extends HttpServlet {
 
     public void init() throws ServletException {
         this.setNomDePackage(this.getInitParameter("packageDeScan"));
+        HashMap hash = new HashMap<Class,Object>();
         try {
             System.out.println(this.getNomDePackage() + " nom de package");
             setMappingUrls(Utils.getMethodesAnnotees(this.getNomDePackage(), Url.class));
+            List<Class<?>> classes = Utils.getLesClasses(this.getNomDePackage());
+            for (Class<?> class1 : classes) {
+                Annotation annotation = class1.getAnnotation(Scope.class);
+                    if(annotation != null){
+                        System.out.println(class1 + " ANNOTERRR SCOPPEE");
+                        Object obj = class1.getDeclaredConstructor().newInstance();
+                        singletons.put(class1, obj);
+                    }
+            }
         } catch (ClassNotFoundException ex) {
             Logger.getLogger(FrontServlet.class.getName()).log(Level.SEVERE, null, ex);
         } catch (IOException ex) {
@@ -163,6 +265,8 @@ public class FrontServlet extends HttpServlet {
             Logger.getLogger(FrontServlet.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
+
+    
 
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
@@ -188,6 +292,14 @@ public class FrontServlet extends HttpServlet {
 
     public void setNomDePackage(String nomDePackage) {
         this.nomDePackage = nomDePackage;
+    }
+
+    public HashMap<Class, Object> getSingletons() {
+        return singletons;
+    }
+
+    public void setSingletons(HashMap<Class, Object> singletons) {
+        this.singletons = singletons;
     }
 
 }
